# NebulaDownloadManager

./: .gitignore  Cargo.toml  DESIGN.md  README.md
apps/desktop/: Cargo.toml  build.rs
apps/desktop/src/: main.rs
assets/: update-feed.example.json
crates/core/: Cargo.toml
crates/core/src/: categories.rs  direct.rs  ipc.rs  lib.rs  planner.rs  queue.rs  torrent.rs  torrent_rqbit.rs
crates/shared/src/: lib.rs
extensions/browser/: README.md  manifest.json
extensions/browser/src/: background.js  popup.css  popup.html  popup.js  video-overlay.js
scripts/: build-desktop.ps1  build-installer.ps1  build-release.ps1  prepare-github-release.ps1
setup/: RELEASE_NOTES.md  RELEASE_NOTES_TEMPLATE.md  update-feed.json
target-release-desktop/: .rustc_info.json
target-release-desktop/release/: desktop.d
target-release-desktop/release/.fingerprint/ab_glyph_rasterizer-28c038ca5ebbecfe/: lib-ab_glyph_rasterizer
target-release-desktop/release/.fingerprint/accesskit-8fe2a38bf48b5a30/: lib-accesskit  lib-accesskit.json
target-release-desktop/release/.fingerprint/accesskit_consumer-1dec50494480baa3/: lib-accesskit_consumer
target-release-desktop/release/.fingerprint/accesskit_windows-4c6e924d58152b06/: lib-accesskit_windows  lib-accesskit_windows.json
target-release-desktop/release/.fingerprint/accesskit_winit-0a1f919871752fb1/: lib-accesskit_winit  lib-accesskit_winit.json
target-release-desktop/release/.fingerprint/adler2-f633e98e76f4ef2b/: lib-adler2
target-release-rqbit-desktop/release/: desktop.d
target-rqbit-desktop-build-20260406wyguza/: .rustc_info.json
tools/ffmpeg/: README.md
tools/yt-dlp/: README.md
(+942 files in other folders)
