[package]
name = "download_core"
version = "0.1.0"
edition = "2024"

[features]
default = []
torrent-rqbit = ["dep:librqbit", "dep:tokio"]

[dependencies]
librqbit = { version = "8", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
